# EcoDonut

./: .gitignore  Makefile  README.md  pyproject.toml
dev_water_graph/: new_water_graph.ipynb
example/: build_ecoframe_example.ipynb  fabdem_tile_getter.ipynb  fabdem_vectorize.ipynb  landscape_vectorizers_by_zone.ipynb  region_example.ipynb  rivers_graph.ipynb  soilgrid_tiles_downloader.ipynb
example/example_data/: fabdem_tiles.parquet  fabdem_tiles_russia.parquet  glofas_flood_tiles_russia.parquet  project_zone.geojson
src/ecodonut/: __init__.py  eco_layers.py  ecodonut.py  output.py  preprocessing.py  utils.py
src/ecodonut/eco_frame/: __init__.py  eco_frame.py  eco_layers.py  get_influencers.py  new_karkas.ipynb  output.py  preprocessing.py  territory_mark.py
src/ecodonut/landscape_vectorizer/: __init__.py  fabdem_bulk_vectorizer.py  fabdem_vectorizers.py  fabdem_vectorizing.py  glofas_flood_vectorizer.py  parallel.py  project_fabdem_vectorizer.py  project_tile_getter.py  soilgrid_vectorizer.py  tiff_readers.py  tiff_utils.py  utils.py  vectorizers.py
src/ecodonut/river_graph/: __init__.py  constants.py  graph_builder.py  spill_sim.py
src/ecodonut/utils/: __init__.py  graph_utils.py  output.py  utils.py
