[tool.poetry]
name = "ecodonut"
version = "1.0.10"
description = ""
authors = ["DDonnyy <63115678+DDonnyy@users.noreply.github.com>"]
readme = "README.md"

packages = [{ include = "ecodonut", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
geopandas = "^1.0.1"
numpy = "^2.1.3"
pandas = "^2.2.3"
matplotlib = "^3.8.4"
mapclassify = "^2.6.1"
folium = "^0.18.0"
tqdm = "^4.66.2"
dask = "^2024.10.0"
networkx = "^3.3"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pylint = "^3.3.1"
isort = "^5.13.2"
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']

[tool.pylint.format]
max-line-length = 120
expected-line-ending-format = "LF"
max-locals = 30
disable = [
    "duplicate-code",
    "missing-module-docstring",
    "missing-function-docstring",
    "too-many-locals",
    "too-many-branches",
    "too-many-statements",
    "too-many-arguments",
    "cyclic-import",
    "line-too-long"
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
split_on_trailing_comma = true
skip = ["__init__.py"]
